{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 216,
  "lineage": "b2ad0a8e-da18-1020-bd63-6c99cae71be9",
  "resources": [
    {
      "module": "module.data_stores",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msk_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026272668614:security-group/sg-0b7d19e17292feb56",
            "description": "Allow internal traffic to MSK/Kafka",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7d19e17292feb56",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053b6c9af78e7de9d"
                ],
                "self": false,
                "to_port": 2181
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053b6c9af78e7de9d"
                ],
                "self": false,
                "to_port": 9092
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9094,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053b6c9af78e7de9d"
                ],
                "self": false,
                "to_port": 9094
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9098,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053b6c9af78e7de9d"
                ],
                "self": false,
                "to_port": 9098
              }
            ],
            "name": "bazaar-msk-sg",
            "name_prefix": "",
            "owner_id": "026272668614",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0764eccdd9f2c2f9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026272668614",
            "id": "sg-0b7d19e17292feb56",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.cde_nodes",
            "module.eks.aws_eks_node_group.general_nodes",
            "module.eks.aws_iam_role.cluster_role",
            "module.eks.aws_iam_role.node_role",
            "module.eks.aws_iam_role_policy_attachment.cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.node_policy_1",
            "module.eks.aws_iam_role_policy_attachment.node_policy_2",
            "module.eks.aws_iam_role_policy_attachment.node_policy_3",
            "module.eks.aws_kms_key.secrets_key",
            "module.eks.aws_security_group.cluster_sg",
            "module.eks.aws_security_group.node_sg",
            "module.vpc.aws_eip.nat_eip_a",
            "module.vpc.aws_eip.nat_eip_b",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw_a",
            "module.vpc.aws_nat_gateway.nat_gw_b",
            "module.vpc.aws_route_table.private_rt_a",
            "module.vpc.aws_route_table.private_rt_b",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.cde_private_a",
            "module.vpc.aws_route_table_association.cde_private_b",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_b",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_b",
            "module.vpc.aws_subnet.cde_private_a",
            "module.vpc.aws_subnet.cde_private_b",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.data_stores",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026272668614:security-group/sg-0c4eac6ae606172dd",
            "description": "Allow internal traffic to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4eac6ae606172dd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053b6c9af78e7de9d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "bazaar-rds-sg",
            "name_prefix": "",
            "owner_id": "026272668614",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0764eccdd9f2c2f9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026272668614",
            "id": "sg-0c4eac6ae606172dd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.cde_nodes",
            "module.eks.aws_eks_node_group.general_nodes",
            "module.eks.aws_iam_role.cluster_role",
            "module.eks.aws_iam_role.node_role",
            "module.eks.aws_iam_role_policy_attachment.cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.node_policy_1",
            "module.eks.aws_iam_role_policy_attachment.node_policy_2",
            "module.eks.aws_iam_role_policy_attachment.node_policy_3",
            "module.eks.aws_kms_key.secrets_key",
            "module.eks.aws_security_group.cluster_sg",
            "module.eks.aws_security_group.node_sg",
            "module.vpc.aws_eip.nat_eip_a",
            "module.vpc.aws_eip.nat_eip_b",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw_a",
            "module.vpc.aws_nat_gateway.nat_gw_b",
            "module.vpc.aws_route_table.private_rt_a",
            "module.vpc.aws_route_table.private_rt_b",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.cde_private_a",
            "module.vpc.aws_route_table_association.cde_private_b",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_b",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_b",
            "module.vpc.aws_subnet.cde_private_a",
            "module.vpc.aws_subnet.cde_private_b",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.data_stores",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026272668614:security-group/sg-05bc54f76bacfceaa",
            "description": "Allow internal traffic to Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05bc54f76bacfceaa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-053b6c9af78e7de9d"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "bazaar-redis-sg",
            "name_prefix": "",
            "owner_id": "026272668614",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0764eccdd9f2c2f9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026272668614",
            "id": "sg-05bc54f76bacfceaa",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_eks_node_group.cde_nodes",
            "module.eks.aws_eks_node_group.general_nodes",
            "module.eks.aws_iam_role.cluster_role",
            "module.eks.aws_iam_role.node_role",
            "module.eks.aws_iam_role_policy_attachment.cluster_policy",
            "module.eks.aws_iam_role_policy_attachment.node_policy_1",
            "module.eks.aws_iam_role_policy_attachment.node_policy_2",
            "module.eks.aws_iam_role_policy_attachment.node_policy_3",
            "module.eks.aws_kms_key.secrets_key",
            "module.eks.aws_security_group.cluster_sg",
            "module.eks.aws_security_group.node_sg",
            "module.vpc.aws_eip.nat_eip_a",
            "module.vpc.aws_eip.nat_eip_b",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw_a",
            "module.vpc.aws_nat_gateway.nat_gw_b",
            "module.vpc.aws_route_table.private_rt_a",
            "module.vpc.aws_route_table.private_rt_b",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.cde_private_a",
            "module.vpc.aws_route_table_association.cde_private_b",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_b",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_b",
            "module.vpc.aws_subnet.cde_private_a",
            "module.vpc.aws_subnet.cde_private_b",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026272668614:security-group/sg-01e515dadb43fd412",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e515dadb43fd412",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/22"
                ],
                "description": "Allow all traffic from Client VPN",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow cluster to cluster",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "bazaar-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "026272668614",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bazaar-eks-cluster-sg"
            },
            "tags_all": {
              "Name": "bazaar-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0764eccdd9f2c2f9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026272668614",
            "id": "sg-01e515dadb43fd412",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_a",
            "module.vpc.aws_eip.nat_eip_b",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw_a",
            "module.vpc.aws_nat_gateway.nat_gw_b",
            "module.vpc.aws_route_table.private_rt_a",
            "module.vpc.aws_route_table.private_rt_b",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.cde_private_a",
            "module.vpc.aws_route_table_association.cde_private_b",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_b",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_b",
            "module.vpc.aws_subnet.cde_private_a",
            "module.vpc.aws_subnet.cde_private_b",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026272668614:security-group/sg-053b6c9af78e7de9d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053b6c9af78e7de9d",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/22"
                ],
                "description": "Allow all traffic from Client VPN",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow cluster control plane to nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-01e515dadb43fd412"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow node to node",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "bazaar-eks-node-sg",
            "name_prefix": "",
            "owner_id": "026272668614",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bazaar-eks-node-sg"
            },
            "tags_all": {
              "Name": "bazaar-eks-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0764eccdd9f2c2f9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026272668614",
            "id": "sg-053b6c9af78e7de9d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.eks.aws_security_group.cluster_sg",
            "module.vpc.aws_eip.nat_eip_a",
            "module.vpc.aws_eip.nat_eip_b",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw_a",
            "module.vpc.aws_nat_gateway.nat_gw_b",
            "module.vpc.aws_route_table.private_rt_a",
            "module.vpc.aws_route_table.private_rt_b",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.cde_private_a",
            "module.vpc.aws_route_table_association.cde_private_b",
            "module.vpc.aws_route_table_association.private_a",
            "module.vpc.aws_route_table_association.private_b",
            "module.vpc.aws_route_table_association.public_a",
            "module.vpc.aws_route_table_association.public_b",
            "module.vpc.aws_subnet.cde_private_a",
            "module.vpc.aws_subnet.cde_private_b",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a30c5ecabc9f16f6",
            "arn": "arn:aws:ec2:us-east-1:026272668614:elastic-ip/eipalloc-0a30c5ecabc9f16f6",
            "association_id": "eipassoc-06bb9420583f016c5",
            "domain": "vpc",
            "id": "eipalloc-0a30c5ecabc9f16f6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06da8d9875a00f447",
            "private_dns": "ip-10-0-1-154.ec2.internal",
            "private_ip": "10.0.1.154",
            "public_dns": "ec2-13-223-182-240.compute-1.amazonaws.com",
            "public_ip": "13.223.182.240",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e96c6e3daf310b0",
            "arn": "arn:aws:ec2:us-east-1:026272668614:elastic-ip/eipalloc-02e96c6e3daf310b0",
            "association_id": "eipassoc-025cbd210408576d1",
            "domain": "vpc",
            "id": "eipalloc-02e96c6e3daf310b0",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03fea3360d4ddc7da",
            "private_dns": "ip-10-0-2-182.ec2.internal",
            "private_ip": "10.0.2.182",
            "public_dns": "ec2-52-71-199-16.compute-1.amazonaws.com",
            "public_ip": "52.71.199.16",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026272668614:internet-gateway/igw-0ff9bff0732b1933a",
            "id": "igw-0ff9bff0732b1933a",
            "owner_id": "026272668614",
            "region": "us-east-1",
            "tags": {
              "Name": "bazaar-igw"
            },
            "tags_all": {
              "Name": "bazaar-igw"
            },
            "vpc_id": "vpc-0764eccdd9f2c2f9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a30c5ecabc9f16f6",
            "association_id": "eipassoc-06bb9420583f016c5",
            "connectivity_type": "public",
            "id": "nat-05c3d9164e63af1e3",
            "network_interface_id": "eni-06da8d9875a00f447",
            "private_ip": "10.0.1.154",
            "public_ip": "13.223.182.240",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-033e2b00303889209",
            "tags": {
              "Name": "bazaar-nat-gw-a"
            },
            "tags_all": {
              "Name": "bazaar-nat-gw-a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_a",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e96c6e3daf310b0",
            "association_id": "eipassoc-025cbd210408576d1",
            "connectivity_type": "public",
            "id": "nat-0a67e5be45ac498c2",
            "network_interface_id": "eni-03fea3360d4ddc7da",
            "private_ip": "10.0.2.182",
            "public_ip": "52.71.199.16",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ca37f2ca4469b85e",
            "tags": {
              "Name": "bazaar-nat-gw-b"
            },
            "tags_all": {
              "Name": "bazaar-nat-gw-b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_b",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026272668614:route-table/rtb-052b846f3a654cc1f",
            "id": "rtb-052b846f3a654cc1f",
            "owner_id": "026272668614",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05c3d9164e63af1e3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bazaar-private-rt-a"
            },
            "tags_all": {
              "Name": "bazaar-private-rt-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0764eccdd9f2c2f9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026272668614",
            "id": "rtb-052b846f3a654cc1f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_a",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw_a",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026272668614:route-table/rtb-0992aebcd360d578d",
            "id": "rtb-0992aebcd360d578d",
            "owner_id": "026272668614",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a67e5be45ac498c2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bazaar-private-rt-b"
            },
            "tags_all": {
              "Name": "bazaar-private-rt-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0764eccdd9f2c2f9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026272668614",
            "id": "rtb-0992aebcd360d578d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_b",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw_b",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026272668614:route-table/rtb-01aeded746ae33a91",
            "id": "rtb-01aeded746ae33a91",
            "owner_id": "026272668614",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff9bff0732b1933a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bazaar-public-rt"
            },
            "tags_all": {
              "Name": "bazaar-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0764eccdd9f2c2f9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026272668614",
            "id": "rtb-01aeded746ae33a91",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cde_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3183f2717c34331",
            "region": "us-east-1",
            "route_table_id": "rtb-052b846f3a654cc1f",
            "subnet_id": "subnet-039be02b8287d8fba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_a",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw_a",
            "module.vpc.aws_route_table.private_rt_a",
            "module.vpc.aws_subnet.cde_private_a",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cde_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d52c3f713a5233a3",
            "region": "us-east-1",
            "route_table_id": "rtb-0992aebcd360d578d",
            "subnet_id": "subnet-0648c8b59119e14f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_b",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw_b",
            "module.vpc.aws_route_table.private_rt_b",
            "module.vpc.aws_subnet.cde_private_b",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b62ca20ff3af6d2",
            "region": "us-east-1",
            "route_table_id": "rtb-052b846f3a654cc1f",
            "subnet_id": "subnet-0654761ff48304173"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_a",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw_a",
            "module.vpc.aws_route_table.private_rt_a",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0198714625cb67e77",
            "region": "us-east-1",
            "route_table_id": "rtb-0992aebcd360d578d",
            "subnet_id": "subnet-01aaa7b73ff1e2fef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip_b",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat_gw_b",
            "module.vpc.aws_route_table.private_rt_b",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0923c3bc12c83f680",
            "region": "us-east-1",
            "route_table_id": "rtb-01aeded746ae33a91",
            "subnet_id": "subnet-033e2b00303889209"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cdd1fe2dc97e800",
            "region": "us-east-1",
            "route_table_id": "rtb-01aeded746ae33a91",
            "subnet_id": "subnet-0ca37f2ca4469b85e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cde_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026272668614:subnet/subnet-039be02b8287d8fba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039be02b8287d8fba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026272668614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bazaar-cde-private-a"
            },
            "tags_all": {
              "Name": "bazaar-cde-private-a"
            },
            "vpc_id": "vpc-0764eccdd9f2c2f9d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026272668614",
            "id": "subnet-039be02b8287d8fba",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cde_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026272668614:subnet/subnet-0648c8b59119e14f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0648c8b59119e14f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026272668614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bazaar-cde-private-b"
            },
            "tags_all": {
              "Name": "bazaar-cde-private-b"
            },
            "vpc_id": "vpc-0764eccdd9f2c2f9d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026272668614",
            "id": "subnet-0648c8b59119e14f3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026272668614:subnet/subnet-0654761ff48304173",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0654761ff48304173",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026272668614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bazaar-private-a"
            },
            "tags_all": {
              "Name": "bazaar-private-a"
            },
            "vpc_id": "vpc-0764eccdd9f2c2f9d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026272668614",
            "id": "subnet-0654761ff48304173",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026272668614:subnet/subnet-01aaa7b73ff1e2fef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01aaa7b73ff1e2fef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "026272668614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bazaar-private-b"
            },
            "tags_all": {
              "Name": "bazaar-private-b"
            },
            "vpc_id": "vpc-0764eccdd9f2c2f9d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026272668614",
            "id": "subnet-01aaa7b73ff1e2fef",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026272668614:subnet/subnet-033e2b00303889209",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033e2b00303889209",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026272668614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bazaar-public-a"
            },
            "tags_all": {
              "Name": "bazaar-public-a"
            },
            "vpc_id": "vpc-0764eccdd9f2c2f9d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026272668614",
            "id": "subnet-033e2b00303889209",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026272668614:subnet/subnet-0ca37f2ca4469b85e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca37f2ca4469b85e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "026272668614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bazaar-public-b"
            },
            "tags_all": {
              "Name": "bazaar-public-b"
            },
            "vpc_id": "vpc-0764eccdd9f2c2f9d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026272668614",
            "id": "subnet-0ca37f2ca4469b85e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:026272668614:vpc/vpc-0764eccdd9f2c2f9d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c62e878749af185b",
            "default_route_table_id": "rtb-07394cb77de0a399b",
            "default_security_group_id": "sg-0cf634dcdc78084c3",
            "dhcp_options_id": "dopt-08309c03f5d9a9a30",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0764eccdd9f2c2f9d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07394cb77de0a399b",
            "owner_id": "026272668614",
            "region": "us-east-1",
            "tags": {
              "Name": "bazaar-vpc"
            },
            "tags_all": {
              "Name": "bazaar-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "026272668614",
            "id": "vpc-0764eccdd9f2c2f9d",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}